package de.othr.bib48218.chat.entity;

/**
 * The visibility of a {@link GroupChat}.
 */
public enum GroupVisibility {
    /**
     * Only visible to members.
     */
    PRIVATE,
    /**
     * Visible to all users.
     */
    PUBLIC,
    ;
}
