package de.othr.bib48218.chat.entity;

public class ServiceCredentials {
    private String loginToken;
    private ServiceType serviceType;
}
