package de.othr.bib48218.chat.entity;

/**
 * The service types.
 */
public enum ServiceType {
    /**
     * This application.
     */
    CHAT,
    /**
     * The web shop partner service.
     */
    WEBSHOP,
    /**
     * The bank partner service.
     */
    BANK,
    /**
     * The payment partner service.
     */
    PAYMENT,
    ;
}
